--- a/app/src/main/res/drawable/edittextstyle.xml
+++ b/app/src/main/res/drawable/edittextstyle.xml
@@ -1,12 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:thickness="0dp"
     android:shape="rectangle">
-    <stroke android:width="4dp"
+    <stroke android:width="5dp"
         android:color="#00709e"/>
     <corners android:radius="5dp" />
-    <gradient
-        android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF"
-        android:type="linear"
-        android:angle="270"/>
+    <solid
+        android:color="#FFFFFF"/>
 </shape>
