--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ru.android_studio.olga.gibdd_servis.MainActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:layout_height="?android:attr/actionBarSize"
-        app:titleTextColor="@color/toolbarText"
-        app:contentInsetStart="0dp"
-        android:gravity="top"
-        android:background="@color/toolbarBackground"
-        android:layout_alignRight="@+id/linearLayout"
-        android:layout_alignEnd="@+id/linearLayout" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="180dp"
         android:weightSum="1"
-        android:layout_alignWithParentIfMissing="false"
         android:gravity="center_vertical|center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout"
-        android:layout_marginTop="20dp">
+        android:id="@+id/linearLayout">
 
         <TextView
             android:layout_width="fill_parent"
@@ -48,67 +26,97 @@
             android:textSize="27sp"
             android:textColor="#00709e"
             android:textStyle="bold"
-            android:background="@drawable/edittextstyle"/>
+            android:background="@drawable/edittextstyle"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp" />
 
     </LinearLayout>
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="146dp"
-        android:id="@+id/tableLayout">
+        android:layout_marginTop="10dp"
+        android:id="@+id/tableLayout"
+        android:padding="5dp"
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
+        android:layout_marginBottom="120dp"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center">
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Проверка штрафов"
+
+                android:layout_span="1"
                 android:id="@+id/button_fine"
-                android:layout_column="0"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:textSize="13sp"
+                android:textColor="#FFFFFF"
+                android:gravity="top|center"
+                android:background="@drawable/fine"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="15dp"
+                android:paddingTop="20dp"/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Проверка водителя"
+                android:layout_span="1"
+
                 android:id="@+id/button_driver"
-                android:layout_column="1"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:textSize="13sp"
+                android:textColor="#FFFFFF"
+                android:gravity="top|center"
+                android:background="@drawable/driver"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="25dp"
+                android:paddingTop="20dp" />
         </TableRow>
 
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:weightSum="2">
 
             <Button
-                android:text="Проверка автомобиля"
+
                 android:id="@+id/button_car"
-                android:layout_column="0"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:layout_span="1"
+                android:textSize="13sp"
+                android:textColor="#FFFFFF"
+                android:gravity="top|center"
+                android:background="@drawable/car"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:paddingTop="20dp" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Прием сообщений"
+
                 android:id="@+id/button_message"
-                android:layout_column="1"
-                android:layout_weight="1"
-                android:textSize="16sp" />
+                android:layout_span="1"
+                android:textSize="13sp"
+                android:textColor="#FFFFFF"
+                android:gravity="top|center"
+                android:background="@drawable/message"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="15dp"
+                android:paddingTop="20dp"
+                android:longClickable="false"
+                android:lines="2" />
         </TableRow>
 
     </TableLayout>
 
-</RelativeLayout>
+</LinearLayout>
