--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="toolbarBackground">#33b5e5</color>
+    <color name="toolbarBackground">#00709e</color>
     <color name="toolbarText">#ffffff</color>
 </resources>
