--- a/app/src/main/res/drawable/button_next.xml
+++ b/app/src/main/res/drawable/button_next.xml
@@ -26,8 +26,8 @@
     </item>
     <item>
         <shape>
-            <gradient android:angle="270" android:endColor="#51A351" android:startColor="#5BB75B" />
-            <stroke android:width="1dp" android:color="#51A351" />
+            <gradient android:angle="270" android:endColor="#83b600" android:startColor="#83b600" />
+            <stroke android:width="1dp" android:color="#83b600" />
             <corners android:radius="4dp" />
             <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
