--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,10 @@
             android:orientation="horizontal"
             >
 
-
             <Button
                 android:id="@+id/button_fine"
-                android:layout_width="100dp"
-                android:layout_height="83dp"
-
-                android:layout_span="1"
+                android:layout_width="150dp"
+                android:layout_height="124dp"
                 android:textSize="13sp"
                 android:textColor="#FFFFFF"
                 android:gravity="top|center"
@@ -40,10 +37,8 @@
 
             <Button
                 android:id="@+id/button_driver"
-                android:layout_width="100dp"
-                android:layout_height="83dp"
-
-                android:layout_span="1"
+                android:layout_width="150dp"
+                android:layout_height="124dp"
                 android:textSize="13sp"
                 android:textColor="#FFFFFF"
                 android:gravity="top|center"
@@ -62,10 +57,8 @@
 
             <Button
                 android:id="@+id/button_car"
-                android:layout_width="100dp"
-                android:layout_height="83dp"
-
-                android:layout_span="1"
+                android:layout_width="150dp"
+                android:layout_height="124dp"
                 android:textSize="13sp"
                 android:textColor="#FFFFFF"
                 android:gravity="top|center"
@@ -76,10 +69,8 @@
 
             <Button
                 android:id="@+id/button_message"
-                android:layout_width="100dp"
-                android:layout_height="83dp"
-
-                android:layout_span="1"
+                android:layout_width="150dp"
+                android:layout_height="124dp"
                 android:textSize="13sp"
                 android:textColor="#FFFFFF"
                 android:gravity="top|center"
@@ -87,8 +78,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="15dp"
                 android:paddingTop="20dp"
-                android:longClickable="false"
-                android:lines="2" />
+                android:longClickable="false"/>
         </LinearLayout>
     </LinearLayout>
 
