--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -21,22 +21,12 @@
             android:layout_gravity="center">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Идентификационный номер (VIN)"
                 android:textSize="18sp"
                 android:id="@+id/VINTextView"
                 android:layout_weight="1" />
-
-            <ImageButton
-                android:backgroundTint="@color/white"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:id="@+id/imageButtonLens"
-                android:src="@drawable/lens"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                />
 
         </LinearLayout>
 
@@ -132,7 +122,6 @@
         </View>
 
         <ImageButton
-            android:backgroundTint="@color/white"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:id="@+id/imageButton"
@@ -147,7 +136,6 @@
         </View>
 
         <ImageButton
-            android:backgroundTint="@color/white"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:id="@+id/imageButton2"
@@ -162,7 +150,6 @@
         </View>
 
         <ImageButton
-            android:backgroundTint="@color/white"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:id="@+id/imageButton3"
@@ -177,7 +164,6 @@
         </View>
 
         <ImageButton
-            android:backgroundTint="@color/white"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:id="@+id/imageButton4"
