--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -26,7 +26,8 @@
                 android:text="Идентификационный номер (VIN)"
                 android:textSize="18sp"
                 android:id="@+id/VINTextView"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical" />
 
             <ImageButton
                 android:layout_width="60dp"
@@ -51,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="VIN номер отсутствует"
-            android:textSize="19dp"
+            android:textSize="17dp"
             android:textColor="#777777"
             android:id="@+id/VINCheckBox"
             android:layout_weight="1" />
@@ -63,7 +64,7 @@
             android:textSize="18sp"
             android:id="@+id/NumberCarTextView"
             android:layout_weight="1"
-            android:paddingTop="22dp" />
+            android:paddingTop="20dp" />
 
         <EditText
             android:layout_width="match_parent"
@@ -80,8 +81,8 @@
             android:text="Введите символы с картинки"
             android:id="@+id/textView4"
             android:layout_weight="1"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp" />
+            android:paddingTop="5dp"
+             />
 
         <ImageView
             android:layout_width="182dp"
@@ -97,32 +98,31 @@
             android:id="@+id/CuptureEditText"
             android:layout_weight="1" />
 
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_check"
+            android:id="@+id/CheckButton"
+            android:background="@drawable/button_next"
+            android:textColor="@drawable/text_button" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" >
+        </View>
+
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        >
-
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Проверить"
-        android:id="@+id/CheckButton"
-        android:background="@drawable/button_next"
-        android:textColor="@drawable/text_button" />
 
     <LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center_horizontal">
-
-
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="10dp">
 
         <View
             android:layout_width="0dp"
@@ -185,8 +185,6 @@
             android:layout_height="1dp"
             android:layout_weight="1" >
         </View>
-
-    </LinearLayout>
 
     </LinearLayout>
 
