Добавил новые страницы - Проверка штрафов - Прием обращений сделал меню активным

--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -110,7 +110,9 @@
             android:layout_height="70dp"
             android:layout_alignParentBottom="true"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignEnd="@id/menuLinearLayout">
 
             <View
                 android:layout_width="0dp"
@@ -121,7 +123,7 @@
             <ImageButton
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageButton"
+                android:id="@+id/menu_fine"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 android:src="@drawable/menu_ruble_off"/>
@@ -135,7 +137,7 @@
             <ImageButton
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageButton2"
+                android:id="@+id/menu_driver"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 android:src="@drawable/menu_driver_on"/>
@@ -149,7 +151,7 @@
             <ImageButton
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageButton3"
+                android:id="@+id/menu_car"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 android:src="@drawable/menu_auto_off"/>
@@ -163,7 +165,7 @@
             <ImageButton
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageButton4"
+                android:id="@+id/menu_question"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 android:src="@drawable/menu_question_off"/>
