--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_weight="1">
 
             <Button
-                android:id="@+id/button_fine"
+                android:id="@+id/menu_fine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -34,7 +34,7 @@
                 android:layout_marginRight="10dp" />
 
             <Button
-                android:id="@+id/button_driver"
+                android:id="@+id/menu_driver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -54,7 +54,7 @@
             android:layout_weight="1">
 
             <Button
-                android:id="@+id/button_car"
+                android:id="@+id/menu_car"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -67,7 +67,7 @@
                 android:layout_gravity="center_horizontal" />
 
             <Button
-                android:id="@+id/button_message"
+                android:id="@+id/menu_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
