--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -124,7 +124,7 @@
         <ImageButton
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:id="@+id/menu_fine"
+            android:id="@+id/menu_fine_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/menu_ruble_off"/>
@@ -138,7 +138,7 @@
         <ImageButton
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:id="@+id/menu_driver"
+            android:id="@+id/menu_driver_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/menu_driver_off"/>
@@ -152,7 +152,7 @@
         <ImageButton
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:id="@+id/menu_car"
+            android:id="@+id/menu_car_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/menu_auto_on"/>
@@ -166,7 +166,7 @@
         <ImageButton
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:id="@+id/menu_question"
+            android:id="@+id/menu_question_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/menu_question_off"/>
