--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/menu_activity"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,7 +23,7 @@
             android:layout_weight="1">
 
             <Button
-                android:id="@+id/menu_fine"
+                android:id="@+id/menu_fine_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -34,7 +35,7 @@
                 android:layout_marginRight="10dp" />
 
             <Button
-                android:id="@+id/menu_driver"
+                android:id="@+id/menu_driver_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -54,7 +55,7 @@
             android:layout_weight="1">
 
             <Button
-                android:id="@+id/menu_car"
+                android:id="@+id/menu_car_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -67,7 +68,7 @@
                 android:layout_gravity="center_horizontal" />
 
             <Button
-                android:id="@+id/menu_question"
+                android:id="@+id/menu_question_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
@@ -81,5 +82,4 @@
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
