--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -80,7 +80,7 @@
             android:layout_width="182dp"
             android:layout_height="50dp"
             android:src="@drawable/capture"
-            android:id="@+id/CaptureImageView"
+            android:id="@+id/captcha_image_view"
             android:layout_weight="1" />
 
         <EditText
