вынес ограничение по версии sdk для androidTest понизил версию sdk minSdkVersion 15
добавил права на доступ в интернет
<uses-permission android:name="android.permission.INTERNET" />

ВАЖНО! удалил id из тега <include layout="@layout/toolbar" android:id="@+id/include" /> иначе нельзя получить вложенный toolbar

По клике на капчу на форме "Проверка автомобиля" производится запрос за капчей в ГИБДД и расшифровка через тесеракт CarActivity.java (58-60)

--- a/app/src/main/res/layout-land/activity_driver.xml
+++ b/app/src/main/res/layout-land/activity_driver.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     tools:context="ru.android_studio.olga.gibdd_servis.MainActivity">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/include2" />
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,7 +23,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="20dp"
-            android:layout_below="@+id/toolbar_my">
+            android:layout_below="@+id/toolbar">
     
             <TextView
                 android:layout_width="match_parent"
