--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="20dp"
-            android:layout_below="@+id/toolbar_my">
+            android:layout_below="@+id/toolbar">
 
             <TextView
                 android:layout_width="match_parent"
